--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <form action="/sign?review_title={{ review_title }}" method="post">
         <div><textarea name="content" class="input-block-level" rows="3"></textarea></div>
-        <div><input type="submit" class="btn btn-large btn-primary" value="Comentar"></div>
+        <div><input type="submit" class="btn btn-large btn-primary" value="Review"></div>
       </form>
 
       <hr>
