Updated class name

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <hr>
 
-      <form>Guestbook name:
+      <form>Game:
         <input value="{{ guestbook_name }}" name="guestbook_name">
         <input type="submit" value="switch">
       </form>
