Changed inner logic of the database

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="container">
-      {% for review in forum %}
+      {% for review in reviews %}
       <div class="row">
         {% if review.author %}
           <b>{{ review.author.email }}
