Changed inner logic of the database

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <input value="{{ game_name }}" name="game_name">
         <input type="submit" value="switch">
       </form>
-
+              <!--TODO: Cambiar botón por lista descendente -->
     </div>
   </body>
 </html>
