--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 {% autoescape true %}
 <html>
   <head>
+    <!-- [START css] -->
     <link type="text/css" rel="stylesheet" href="/bootstrap/css/bootstrap.css">
     <link type="text/css" rel="stylesheet" href="/bootstrap/css/bootstrap-responsive.css">
+    <!-- [END css] -->
     <style type="text/css">
       body {
         padding-top: 40px;
@@ -39,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Game Reviews</a>
+          <a class="brand" href="#">App Engine Guestbook</a>
           <div class="nav-collapse collapse pull-right">
             <a href="{{ url|safe }}" class="btn">{{ url_linktext }}</a>
           </div>
@@ -47,32 +49,36 @@
       </div>
     </div>
     <div class="container">
-      {% for review in reviews %}
+      <!-- [START greetings] -->
+      {% for greeting in greetings %}
       <div class="row">
-        {% if review.author %}
-          <b>{{ review.author.email }}
-            {% if user and user.user_id() == review.author.identity %}
+        {% if greeting.author %}
+          <b>{{ greeting.author.email }}
+            {% if user and user.user_id() == greeting.author.identity %}
               (You)
             {% endif %}
           </b> wrote:
         {% else %}
           An anonymous person wrote:
         {% endif %}
-        <blockquote>{{ review.content }}</blockquote>
+        <blockquote>{{ greeting.content }}</blockquote>
       </div>
       {% endfor %}
+      <!-- [END greetings] -->
 
-      <form action="/sign?game_name={{ game_name }}" method="post">
+      <form action="/sign?guestbook_name={{ guestbook_name }}" method="post">
         <div><textarea name="content" class="input-block-level" rows="3"></textarea></div>
-        <div><input type="submit" class="btn btn-large btn-primary" value="Review"></div>
+        <div><input type="submit" class="btn btn-large btn-primary" value="Sign Guestbook"></div>
       </form>
 
       <hr>
-      <form>Game:
-        <input value="{{ game_name }}" name="game_name">
+
+      <form>Guestbook name:
+        <input value="{{ guestbook_name }}" name="guestbook_name">
         <input type="submit" value="switch">
       </form>
-              <!--TODO: Cambiar botón por lista descendente -->
+
+      <a href="{{ url|safe }}">{{ url_linktext }}</a>
     </div>
   </body>
 </html>
