--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <hr>
 
-      <form>GameReview name:
+      <form>Game name:
         <input value="{{ game_name }}" name="game_name">
         <input type="submit" value="switch">
       </form>
