--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">App Engine Game Reviews</a>
+          <a class="brand" href="#">GAE Game Reviews</a>
           <div class="nav-collapse collapse pull-right">
             <a href="{{ url|safe }}" class="btn">{{ url_linktext }}</a>
           </div>
@@ -71,7 +71,7 @@
 
       <form class="form-inline">
         <div class="form-group mb-2">
-          <label for="staticGameName" class="sr-only">Current game</label>
+          <label for="staticGameName" class="sr-only">Current game    </label>
           <input type="text" readonly class="form-control-plaintext" id="staticGameName" value="{{ game_name }}">
         </div>
       </form>
