--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <form class="form-inline">
         <div class="form-group mb-2">
-          <label for="staticGameName" class="sr-only">Current game    </label>
+          <label for="staticGameName" class="sr-only">Current game: </label>
           <input type="text" readonly class="form-control-plaintext" id="staticGameName" value="{{ game_name }}">
         </div>
       </form>
@@ -80,11 +80,10 @@
         <div class="form-group">
           <label for="changeGame"></label>
             <select class="form-control" id="changeGame" name="game_name">
-              <option>1</option>
+              <option selected disabled hidden style='display: none' value=''></option>
               <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
+
+
             </select>
         </div>
         <div class="ae-button-submit">
