--- a/index.html
+++ b/index.html
@@ -93,7 +93,21 @@
 
       <hr>
 
-      <a class="btn btn-primary btn-large" href="#" role="button">Add New Game</a>
+      <div id="accordion">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Add a new game here!
+
+                <a class="btn btn-primary btn-large" href="#" role="button">Add New Game</a>
+              </button>
+            </h5>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </body>
 </html>
