Putting everything on 1 page

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
       <form class="form-inline">
         <div class="form-group mb-2">
+          <span class="border-top"></span>
           <label for="staticGameName" class="sr-only">Current game: </label>
           <input type="text" readonly class="form-control-plaintext" id="staticGameName" value="{{ game_name }}">
         </div>
@@ -93,6 +94,7 @@
       <hr>
 
       <form id="frmInput" action="/addgame" method="post">
+        <span class="border-top"></span>
         <div class="form-group">
           <label for="exampleFormControlInput1">Email address</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
