--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
       <form id="frmInput" action="/addgame" method="post">
         <div class="form-group">
-          <label for="exampleFormControlInput1">Email address</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          <label for="addName">Name</label>
+          <input type="text" class="form-control" id="addName" placeholder="name@example.com">
         </div>
             <a class="btn btn-primary btn-large" href="#" role="button">Add New Game</a>
       </form>
