--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
       <form id="frmInput" action="/addgame" method="post">
         <div class="form-group">
           <label for="addName">Name</label>
-          <input type="text" class="form-control" id="addName" placeholder="name@example.com">
+          <input type="text" class="form-control" id="addName" placeholder="Final Fantasy XIV">
+          <label for="addGenre">Genre</label>
+          <input type="text" class="form-control" id="addGenre" placeholder="MMORPG">
         </div>
             <a class="btn btn-primary btn-large" href="#" role="button">Add New Game</a>
       </form>
