--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% autoescape true %}
-<html>
+<html lang="">
   <head>
     <link type="text/css" rel="stylesheet" href="/bootstrap/css/bootstrap.css">
     <link type="text/css" rel="stylesheet" href="/bootstrap/css/bootstrap-responsive.css">
@@ -29,6 +29,7 @@
         overflow: scroll;
       }
     </style>
+    <title>GAE Game Reviews</title>
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
