--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <div class="container">
       <form id="frmInput" action="/add" method="post">
         <div class="form-group">
-          <label for="game_name">Name</label>
-          <input type="text" class="form-control" id="game_name" placeholder="Final Fantasy XIV">
+          <label for="game_id">Name</label>
+          <input type="text" class="form-control" id="game_id" placeholder="Final Fantasy XIV">
           <label for="genre">Genre</label>
           <input type="text" class="form-control" id="genre" placeholder="MMORPG">
         </div>
