--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
       <hr>
     </div>
     <div class="container">
-      <form id="frmInput" action="/add" method="post">
+      <form id="frmInput" action="/add?game_name={{ game_name }}" method="post">
         <div class="form-group">
           <label for="game_id">Name</label>
-          <input type="text" class="form-control" id="game_id" placeholder="Final Fantasy XIV">
+          <input type="text" class="form-control" id="game_id" name="game_id" placeholder="Final Fantasy XIV">
           <label for="genre">Genre</label>
-          <input type="text" class="form-control" id="genre" placeholder="MMORPG">
+          <input type="text" class="form-control" id="genre" name="genre" placeholder="MMORPG">
         </div>
             <div><input type="submit" class="btn btn-large btn-primary" value="Add Game"></div>
       </form>
