--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">GAE Game Reviews</a>
+          <a class="brand" href="https://als-datastore-pro.ew.r.appspot.com/">GAE Game Reviews</a>
           <div class="nav-collapse collapse pull-right">
             <a href="{{ url|safe }}" class="btn">{{ url_linktext }}</a>
           </div>
